# ai-evaluator

./: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
src/ai_evaluator/: __init__.py  config.py  ollama_client.py  page_evaluator.py
tests/unit/: test_ollama_client.py  test_page_evaluator.py
